# ChangeLog for vmware overlay
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  26 Mar 2007; Mike Auty <ikelos@gentoo.org>:
  Fix the location of BUILD_TARGETS so that all the variables are
  correctly initialized.  Bug 172337, thanks Georgi.
  
  26 Mar 2007; Mike Auty <ikelos@gentoo.org>:
  Removed ~amd64 support from vmware-server-tools after a
  report of compilation failure.
  
  04 Mar 2007; Mike Auty <ikelos@gentoo.org>:
  Fixed up vmware-server-tools-1.0.2 to work with both 2.6.18 and 2.6.19
  using a patch courtesy from Aaron Gipson.

  03 Mar 2007; Mike Auty <ikelos@gentoo.org>:
  Version bump to 1.0.2.39867.
  
  23 Feb 2007; Mike Auty <ikelos@gentoo.org>:
  Fix up the dates in this changelog, 5;)
  and also bump to any-any108.
  
  31 Jan 2007; Mike Auty <ikelos@gentoo.org>:
  Sync the server ebuild with the tree, and bump to any-any107.
  
  05 Jan 2007; Mike Auty <ikelos@gentoo.org>:
  Update the server and eclass einfo/elog statements in line with the 
  portage ebuilds.
  
  30 Dec 2006; Mike Auty <ikelos@gentoo.org>:
  Removed a -f from the modprobe-over-insmod patch for server.
  Leaving this to test for a little while, if there's no complaints
  it'll get pushed out to the masses (not sure whether to revbump).

  28 Dec 2006; Mike Auty <ikelos@gentoo.org>:
  Right, just added in the beta for workstation 6.  It's *very* experimental,
  as in, we won't support it at all, hence why it's -* keyword masked.

  Things that currently go wrong with it:

  * /opt/vmware/workstation/lib/bin-debug/* don't get the correct suid
  permissions. Not too much of a problem, since the debugging builds run quite
  slowly, either fix the permissions or remove the directory and symlink
  ../lib/bin to .../lib/bin-debug.
  * vmware seemed to just fail spontaneously when I started it on the latest
  gnome ~x86, but it starts ok (if looking a little ugly) when run as
  "VMWARE_USE_SHIPPED_GTK=force vmware"