@@ -10,10 +10,10 @@ AUX patches/vmhgfs/001_all_kernel-2.6.19-mount.patch 1047 RMD160 34824e2c4b7b2bb
 MD5 4bb51b0e3d626700c3b396b9d14ef01c files/patches/vmhgfs/001_all_kernel-2.6.19-mount.patch 1047
 RMD160 34824e2c4b7b2bbd93cd8c409126cf39ba7b86c0 files/patches/vmhgfs/001_all_kernel-2.6.19-mount.patch 1047
 SHA256 de0ed1136921ea355a79cf7a5b283258d644c4028abc5cdd6bfbed5339e46b75 files/patches/vmhgfs/001_all_kernel-2.6.19-mount.patch 1047
-EBUILD vmware-server-tools-1.0.2.39867.ebuild 1153 RMD160 f5c6233e56216d439fdfbbd3f734332d843e8b9c SHA1 8b8fae1a04599e4d19a4fba6d3bdfea7f77afca2 SHA256 f7abaa62338de6607eb3522cf4e52cfe02d901c1fd92415620e3d0df01890e91
-MD5 538c38144153624caef8fc3c5551f11a vmware-server-tools-1.0.2.39867.ebuild 1153
-RMD160 f5c6233e56216d439fdfbbd3f734332d843e8b9c vmware-server-tools-1.0.2.39867.ebuild 1153
-SHA256 f7abaa62338de6607eb3522cf4e52cfe02d901c1fd92415620e3d0df01890e91 vmware-server-tools-1.0.2.39867.ebuild 1153
+EBUILD vmware-server-tools-1.0.2.39867.ebuild 1153 RMD160 18cdd35da4a172845f8ae876561c4fa133ae321a SHA1 8ccb762343350152f686c9dada563dffd3fdf2a4 SHA256 791e5a1a8d680bd905bee99e93172254a666be9f57673cab56441dfff1004bf1
+MD5 7eade6869a489af74da4da4de21618b6 vmware-server-tools-1.0.2.39867.ebuild 1153
+RMD160 18cdd35da4a172845f8ae876561c4fa133ae321a vmware-server-tools-1.0.2.39867.ebuild 1153
+SHA256 791e5a1a8d680bd905bee99e93172254a666be9f57673cab56441dfff1004bf1 vmware-server-tools-1.0.2.39867.ebuild 1153
 MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b02a39bcd0165558de67ff4256cfc812418a3 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215
 MD5 7cc95faad4185e8ed375248bc73a17fc metadata.xml 159
 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 metadata.xml 159
