@@ -10,7 +10,7 @@ SRC_URI=""
 
 LICENSE="vmware"
 SLOT="0"
-KEYWORDS="-* -amd64 ~x86"
+KEYWORDS="-* ~amd64 ~x86"
 IUSE="X"
 RESTRICT=""
 
